Nuove cartelle create

--- a/Verifica_Melon/Verifica_Melon.csproj
+++ b/Verifica_Melon/Verifica_Melon.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{263811FD-CAC0-46D7-B874-5F89C2AD06CA}</ProjectGuid>
+    <ProjectGuid>{FE509809-A9B7-49D4-9A6E-1CB5AED31B96}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Sbronks</RootNamespace>
-    <AssemblyName>Sbronks</AssemblyName>
+    <RootNamespace>Verifica_Melon</RootNamespace>
+    <AssemblyName>Verifica_Melon</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,7 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clienti.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
